[package]
name = "portal-tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
opt-level = "z"

[dependencies]
vtf = "0.1.4"
image = "0.23.14"
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.4"
hex = "0.4.3"
imageproc = "*"